Featured links alignment fix

--- a/unusualbusiness/assets/styles/layout/_l-featured-snippets.scss
+++ b/unusualbusiness/assets/styles/layout/_l-featured-snippets.scss
@@ -56,9 +56,9 @@
 }
 
 .l-featured-links {
-  margin: 0 auto;
+  margin: 0 0 0 auto;
   width: 293px;
-  height: 300px;
+  height: 300px; 
 
   @media (max-width: $tablet-horizontal) {
     width: 100%;
